<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Energize</string>
    <string name="pref_title_show_notification_bar">Status bar icon</string>
    <string name="pref_title_change_batteryestimation">Battery estimation method</string>
    <string name="pref_summary_change_batteryestimation">Method: %1$s</string>
    <string name="pref_title_temperature_unit">Temperature unit</string>
    <string name="pref_summary_temperature_unit">Used unit: %1$s</string>
    <string name="pref_title_clearstatsdb">Clear statistics database</string>
    <string name="pref_summary_clearstatsdb">Clears the recorded battery events</string>
    <string name="notification_title_missingstatistics">Too less statistics</string>
    <string name="notification_title_charges">Battery charges</string>
    <string name="notification_title_discharges">Battery discharges</string>
    <string name="notification_text_estimate">%1$d hour(s) and %2$d minute(s) remaining</string>
    <string name="notification_text_estimate_na">Estimation currently not available</string>
    <string name="notification_text_missingstatistics">Please wait some more minutes</string>
    <string name="battery_state_charging">Charging</string>
    <string name="battery_state_discharging">Discharging</string>
    <string name="battery_state_full">Full</string>
    <string name="battery_state_unknown">Unknown</string>
    <string name="textview_label_current_chargingstate">Charging state:</string>
    <string name="dialog_title_whatsnew">What\'s new?</string>
    <string name="dialog_title_appiconlicense">Additional licenses</string>
    <string name="dialog_text_appiconlicense">Portions of the application icon (the Android robot) are modifications based on work created and shared by the Android Open Source Project and used according to terms described in the Creative Commons 2.5 Attribution License.\n\nThe battery icon used in the application icon was designed by the GNOME High contrast icons/authors and is licensed under the terms of the GNU Lesser General Public License as published by the Free Software Foundation; either version 2.1 of the License, or (at your option) any later version.\n\nGraphView library (for drawing all charts) was developed by Jonas Gehring.\n\nViewPagerIndicator library (for switching the fragments) was developed by Jake Wharton.\n\nA part of the code for formatting and showing the changelog was written by Martin van Zuilekom.</string>
    <string name="dialog_title_cleardb_successfull">Database cleared</string>
    <string name="dialog_text_cleardb_successfull">The battery statistics were deleted and it will talke some time until the charging estimation will work again.</string>
    <string name="dialog_title_copydb_successfull">Database copied</string>
    <string name="dialog_text_copydb_successfull">The battery statistics database was successfully copied to your SD card.</string>
    <string name="fragment_title_overview">Overview</string>
    <string name="fragment_title_batterygraph">Battery graph</string>
    <string name="fragment_title_temperaturegraph">Temp. graph</string>
    <string name="menu_about">About Energize&#8230;</string>
    <string name="menu_lockscreen">Lock screen</string>
    <string name="fragment_title_about">About&#8230;</string>
    <string name="textview_app_version">Version: %s (beta)</string>
    <string name="dc_widget_charged_long">%1$d%% charged</string>
    <string name="textview_do_you_like_it">Do you like Energize?</string>
    <string name="textview_why_rating_the_app">Support us by writing a review and/or rating the app in the Google Play Store.</string>
    <string name="button_rate_app">Rate the app</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_show3rdpartylicense">Show additional licenses</string>
    <string name="textview_label_applicense">The application is open source and is licensed under the terms of the <a href="http://www.gnu.org/copyleft/gpl.html">GPLv3</a>. You can get the source code from <a href="https://github.com/thuetz/Energize">GitHub</a>.</string>
    <string name="textview_label_temperature">Battery temperature:</string>
    <string name="textview_label_remainingtime">Remaining time:</string>
    <string name="textview_text_remainingtime">%1$d hour(s) and %2$d minute(s)</string>
    <string name="textview_label_timeonbattery">Time on battery:</string>
    <string name="textview_text_timeonbattery">%1$d hour(s) and %2$d minute(s)</string>
    <string name="simplewidget_textview_remainingtime">%1$d hour(s) and %2$d minute(s)</string>
    <string name="textview_label_charginglvl_asusdock">ASUS Transformer Pad Dock capacity:</string>
    <string name="textview_text_temperature_celsius">%.1f °C</string>
    <string name="textview_text_temperature_fahrenheit">%.1f °F</string>
    <string name="textview_text_temperature_kelvin">%.1f °K</string>
    <string name="btn_close_about_dialog">Close the dialog</string>
    <string name="textview_or_close_the_app_label">or</string>
    <string name="dlg_title_appcrash">The app crashed</string>
    <string name="dlg_msg_appcrash">Sorry, but it seems that there is a bug in the application which caused it to crash right now. Please help me fix this bug as soon as possible by sending me a crash report via email. This report does NOT contain any private data and is deleted as soon as the bug is fixed.</string>
	<string name="dc_widget_desc">Shows the current battery charging state and an estimate for the remaining battery time.</string>
    
    <string-array name="pref_list_temperature_unit_names">
        <item>Celsius</item>
        <item>Fahrenheit</item>
        <item>Kelvin</item>
    </string-array>
    <string-array name="pref_list_batteryestimationmethod_names">
        <item>Last change period (inaccurate)</item>
        <item>Last n-change periods (bit inaccurate)</item>
    </string-array>

</resources>
