<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_about_application_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_about_application_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="55dp"
        android:text="@string/textview_app_version"
        android:textSize="20dp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/tv_do_you_like_the_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:text="@string/textview_do_you_like_it"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_why_rating_the_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="20dp"
        android:text="@string/textview_why_rating_the_app"
        android:textSize="15dp"
        android:textStyle="normal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_rate_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_rate_app" />
        
    <TextView
        android:id="@+id/tv_or_close_the_app_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_or_close_the_app_label" />

        <Button
            android:id="@+id/btn_close_about_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_close_about_dialog" />
    </LinearLayout>

</LinearLayout>